<resources>
    <string name="app_name">mockup</string>
    <string name="letoya">letoya</string>
    <string name="connect_with_twitter">Connect with <b/>Twitter</string>
    <string name="sign_up_with_email">Sign up with <b/>Email</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="connect_with_facebook">Connect with <b/>Facebook</string>
</resources>
